--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <body>
 
 <h2>Made it this far? We're only starting ;D</h2>
-<p>a</p>
+<p>anyways... can you find where this is hosted? (hint:somewhere on earth!)</p>
 // i hope you didnt cheat and came directly to my github! or came accross it by accident?!
 
 </body>
