--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
 
 <h2>Made it this far? We're only starting ;D</h2>
 <p>anyways... can you find where this is hosted? (hint:somewhere on earth!)</p>
+  <p>this is where the first part stops... the introduction!</p>
 // i hope you didnt cheat and came directly to my github! or came accross it by accident?!
+  // 
 
 </body>
 </html>
