--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
 <h2>Made it this far? We're only starting ;D</h2>
 <p>anyways... can you find where this is hosted? (hint:somewhere on earth!)</p>
   <p>this is where the first part stops... the introduction!</p>
-// i hope you didnt cheat and came directly to my github! or came accross it by accident?!
-  // 
+<!-- i hope you didnt cheat and came directly to my github! or came accross it by accident?!
+  sorry my puzzle is ass, but oh well... working on completing it soon-->
 
 </body>
 </html>
