--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
 </head>
 <body>
     <h1>Hola :3</h1>
+     <img src="cookie.png" alt="bookiewookie"> 
     <audio id="audio" src="audio.wav"></audio>
     <button onclick="document.getElementById('audio').play()">Play</button>
     <button onclick="downloadAudio()">Download</button>
