--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 <body>
     <h1>Hola :3</h1>
      <img src="cookie.png" alt="bookiewookie" style="width:900px;height:600px;"> 
-    <audio id="audio" src="audio.wav"></audio>
+    <audio id="audio" src="audio.mp3"></audio>
     <button onclick="document.getElementById('audio').play()">Play</button>
     <button onclick="downloadAudio()">Download</button>
 
