--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
     <script>
         function downloadAudio() {
             const link = document.createElement('a');
-            link.href = 'audio.wav';
-            link.download = 'audio.wav';
+            link.href = 'audio.mp3';
+            link.download = 'audio.mp3';
             document.body.appendChild(link);
             link.click();
             document.body.removeChild(link);
