--- a/index.html
+++ b/index.html
@@ -24,16 +24,16 @@
 </head>
 <body>
     <h1>Hola :3</h1>
-     <img src="cookie.png" alt="bookiewookie" style="width:900px;height:600px;"> 
-    <audio id="audio" src="audio.mp3"></audio>
+
+    <audio id="audio" src="audio.wav"></audio>
     <button onclick="document.getElementById('audio').play()">Play</button>
     <button onclick="downloadAudio()">Download</button>
 
     <script>
         function downloadAudio() {
             const link = document.createElement('a');
-            link.href = 'audio.mp3';
-            link.download = 'audio.mp3';
+            link.href = 'audio.wav';
+            link.download = 'audio.wav';
             document.body.appendChild(link);
             link.click();
             document.body.removeChild(link);
